@@ -38,16 +38,10 @@ public class DefaultSignalMastManagerXml
         if (m != null) {
             // include contents
             for (SignalMast p : m.getNamedBeanSet()) {
-                //Element e = new Element("signalmast");
-                try {
-                    Element e = jmri.configurexml.ConfigXmlManager.elementFromObject(p);
-                    if (e != null) {
-                        element.addContent(e);
-                    }
-                } catch (Exception ex) {
-                    log.error("Error storing signalmast: {}", ex);
+                Element e = jmri.configurexml.ConfigXmlManager.elementFromObject(p);
+                if (e != null) {
+                    element.addContent(e);
                 }
-
             }
             List<SignalMastRepeater> repeaterList = m.getRepeaterList();
             if (repeaterList.size() > 0) {
@@ -110,10 +104,12 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
-                } catch (Exception ex) {
+                } catch (ClassNotFoundException | NoSuchMethodException | InstantiationException 
+                            | IllegalAccessException | java.lang.reflect.InvocationTargetException
+                            | jmri.configurexml.JmriConfigureXmlException ex) {
                     log.error("Exception while loading {}: {}", e.getName(), ex, ex);
                 }
             }
@@ -126,10 +122,12 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
-                } catch (Exception ex) {
+                } catch (ClassNotFoundException | NoSuchMethodException | InstantiationException 
+                            | IllegalAccessException | java.lang.reflect.InvocationTargetException
+                            | jmri.configurexml.JmriConfigureXmlException ex) {
                     log.error("Exception while loading {}: {}", e.getName(), ex, ex);
                 }
             }
@@ -142,10 +140,12 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
-                } catch (Exception ex) {
+                } catch (ClassNotFoundException | NoSuchMethodException | InstantiationException 
+                            | IllegalAccessException | java.lang.reflect.InvocationTargetException
+                            | jmri.configurexml.JmriConfigureXmlException ex) {
                     log.error("Exception while loading {}: {}", e.getName(), ex, ex);
                 }
             }
@@ -158,10 +158,12 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
-                } catch (Exception ex) {
+                } catch (ClassNotFoundException | NoSuchMethodException | InstantiationException 
+                            | IllegalAccessException | java.lang.reflect.InvocationTargetException
+                            | jmri.configurexml.JmriConfigureXmlException ex) {
                     log.error("Exception while loading {}: {}", e.getName(), ex, ex);
                 }
             }
@@ -174,10 +176,12 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
-                } catch (Exception ex) {
+                 } catch (ClassNotFoundException | NoSuchMethodException | InstantiationException 
+                            | IllegalAccessException | java.lang.reflect.InvocationTargetException
+                            | jmri.configurexml.JmriConfigureXmlException ex) {
                     log.error("Exception while loading {}: {}", e.getName(), ex, ex);
                 }
             }
@@ -190,10 +194,12 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
-                } catch (Exception ex) {
+                } catch (ClassNotFoundException | NoSuchMethodException | InstantiationException 
+                            | IllegalAccessException | java.lang.reflect.InvocationTargetException
+                            | jmri.configurexml.JmriConfigureXmlException ex) {
                     log.error("Exception while loading {}: {}", e.getName(), ex, ex);
                 }
             }
